# engin33ring-thesis

./: .gitignore  Makefile  docker-compose.yaml  package-lock.json  package.json  pyproject.toml
.github/actions/verify_changes/: action.yml
.github/workflows/: style.yml  tests.yml
backend/: .gitignore  docker-compose.yaml  frame_requests.http  metadata_requests.http  pyproject.toml
backend/resources/: config_development.yaml  otel-collector-config.yaml  prometheus.yml
backend/resources/perses/: dashboard.json  datasource.json  project.json
backend/src/: app.py  dependencies.py  settings.py
backend/src/analysis/api/: endpoints.py  model.py
backend/src/analysis/application/: analysis_port.py  create_analysis_use_case.py  end_analysis_use_case.py  get_analysis_list_use_case.py  get_video_url_use_case.py
backend/src/analysis/domain/: analysis.py
backend/src/authentication/application/: authentication_port.py
backend/src/frame/api/: endpoints.py  model.py
backend/src/frame/application/: create_frame_use_case.py  detection_port.py  frame_port.py  frame_use_case.py
backend/src/frame/domain/: detection.py  frame.py  label_mapping.py
backend/src/hasher/application/: hasher_port.py
backend/src/infrastructure/adapter/: authentication_adapter.py  ffmpeg_stitcher_adapter.py  hasher_adapter.py  jwt_token_adapter.py  mongo_analysis_adapter.py  mongo_database_adapter.py  mongo_frame_adapter.py  mongo_user_adapter.py  onnx_detection_adapter.py  rustfs_long_term_storage_adapter.py
backend/src/infrastructure/config/: database_config.py  logging_config.py  mongo_config.py  rustfs_config.py  tracing_config.py
backend/src/infrastructure/port/: database_port.py
backend/src/infrastructure/security/: get_current_user.py
backend/src/long_term_storage/application/: long_term_storage_port.py
backend/src/metadata/api/: endpoints.py  model.py
backend/src/metadata/application/: metadata_use_case.py
backend/src/metadata/domain/: metadata.py
backend/src/stitcher/application/: stitcher_port.py
backend/src/token/api/: endpoints.py  model.py
backend/src/token/application/: create_token_use_case.py  token_port.py
backend/src/user/api/: endpoints.py  model.py
backend/src/user/application/: create_user_use_case.py  user_port.py
backend/src/user/domain/: user.py
backend/tests/analysis/application/: test_create_analysis_use_case.py  test_end_analysis_use_case.py
backend/tests/frame/application/: test_create_frame_use_case.py
backend/tests/infrastructure/adapter/: test_ffmpeg_stitcher_adapter.py  test_mongo_analysis_adapter.py  test_rustfs_long_term_storage_adapter.py
backend/tests/infrastructure/adapter/onnx_detection/: conftest.py  test_decode_image.py  test_detect.py  test_postprocess.py  test_preprocess.py  test_select_best_detection.py  test_to_result.py
docs/flows/: application_flow.puml  frontend_flow.puml
docs/use_cases/: backend_usecases.puml  frontend_usecases.puml
engin33ring-thesis-front/: index.html  package-lock.json  package.json  vite.config.ts
engin33ring-thesis-front/src/: App.tsx
engin33ring-thesis-front/src/pages/: AnalysisPage.tsx
frontend/: .gitignore  README.md  eslint.config.ts  package-lock.json  package.json  stylelint.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vitest.config.ts
frontend/app/: app.css
frontend/app/routes/: home.tsx
frontend/src/: App.tsx  index.css  main.tsx  mockData.ts  tracing.ts
ml/: .gitignore  Makefile  README.md  pyproject.toml  results.csv
ml/configs/: train_config.yaml
ml/data/: dataset.yaml
ml/notebooks/: exploration.ipynb
ml/scripts/: evaluate.py  export_model.py  prepare_dataset.py  train.py
ml/src/: dataset_converter.py  label_mapping.py  visualize.py
(+64 files in other folders)
