[project]
name = "engin33ring-thesis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "minio>=7.2.20",
    "mypy>=1.19.1",
    "pydantic-settings[yaml]>=2.12.0",
    "pymongo>=4.16.0",
    "ruff>=0.14.13",
    "uvicorn>=0.40.0",
]

[tool.mypy]
plugins = ['pydantic.mypy']

[[tool.mypy.overrides]]
module = "backend.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
